Add AI-enhanced newsletter generation
- Uses Claude to generate insightful commentary on keywords
- Mike's take on each trend with domain investment insights
- Weekly thesis and pattern analysis
- Requires ANTHROPIC_API_KEY secret in GitHub Actions

--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -27,6 +27,8 @@ jobs:
           python -m spacy download en_core_web_sm
 
       - name: Run keyword pipeline
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: python main.py
 
       - name: Commit and push reports
