Phase 1: Keyword intelligence system with HN, arXiv, GitHub collectors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,23 @@
-# Core
+# Web requests
 requests>=2.31.0
-feedparser>=6.0.10
+httpx>=0.25.0
 
-# NLP
+# HTML parsing
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
+# NLP / Text processing
 spacy>=3.7.0
 
-# Data processing
+# Data handling
 pandas>=2.0.0
 
-# Web scraping (for YC)
-playwright>=1.40.0
-beautifulsoup4>=4.12.0
-
 # Database
-aiosqlite>=0.19.0
-
-# Scheduling (Phase 3)
-schedule>=1.2.0
-
-# WordPress integration (Phase 3)
-python-wordpress-xmlrpc>=2.3
+# (using built-in sqlite3)
 
 # Utilities
-python-dotenv>=1.0.0
-rich>=13.0.0
-anthropic
+python-dateutil>=2.8.0
+tqdm>=4.66.0
+
+# arXiv API
+arxiv>=2.0.0
